Revision history for App-Pocoirc

{{$NEXT}}

0.25  Wed Sep 29 05:03:27 UTC 2010
    - In the config, keep networks in a hash, not an array
    - Log which IRC class we're using (e.g. State)
    - Pass the network name and a status callback when registering plugins

0.24  Tue Sep 28 08:50:10 GMT 2010
    - Sort the plugin list emitted by -L
    - Use -a (add plugin) instead of -U for --plugin, and -A for --arg

0.23  Mon Sep 27 19:57:02 GMT 2010
    - Format the verbose output like other debugging output
    - Don't raise an exception when someone parts without a part message
    - Convert to utf8 and strip all colors/formatting from IRC messages
      before they end up in the status log
    - Log it if we can't log into an IRC server due to the nick being in use
    - Move -L/--plugin option to -U/--plugin
    - Add -L/--list-plugins to list all available pocoirc plugins
    - Add -F/--pid-file for keeping a pid file

0.22  Mon Sep 27 09:30:56 GMT 2010
    - Remove some erroneous docs from the App::Pocoirc::Status Pod.

0.21  Mon Sep 27 03:46:03 GMT 2010
    - Make --no-color actually work (and use -b for the short option)

0.20  Sun Sep 26 03:49:11 GMT 2010
    - Depend on POE::Component::Client::DNS and use the same resolver object
      for all IRC components

0.19  Sun Sep 26 02:54:11 GMT 2010
    - On shutdown, wait up to 5 seconds for IRC servers to disconnect after
      we quit
    - On shutdown, forcefully disconnect from servers to which we are
      connected but not logged in
    - Don't log more than one "Exiting" message after shutdown is initiated
    - Fixed a small error in the usage message
    - Tabulate the log messages a bit for easier reading

0.18  Sat Sep 25 21:31:33 GMT 2010
    - Add -t/--trace option to trace events
    - Fix compilation test for the pocoirc script
    - Move -P/--plugin to -L/--plugin
    - Move -p/--password to -P/--password
    - Add -p/--port to specify the server port
    - Log our process id on startup
